added redux thunk and Route Handlers

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@mui/material-nextjs": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.1",
+    "axios": "^1.9.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-redux": "^9.2.0",
     "styled-components": "^6.1.18",
+    "uuid": "^11.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
